[gd_scene load_steps=6 format=3 uid="uid://boxb655r78rcu"]

[ext_resource type="Script" path="res://pet.gd" id="1_pa7gm"]
[ext_resource type="Script" path="res://config.gd" id="2_733f5"]
[ext_resource type="Texture2D" uid="uid://hyuu72u4l7fd" path="res://pet_assets/flyMan_still_stand.png" id="2_h6co6"]
[ext_resource type="Script" path="res://Behaviour.gd" id="2_ovmnc"]
[ext_resource type="Script" path="res://mouse.gd" id="3_vbt87"]

[node name="Pet" type="Node2D"]
script = ExtResource("1_pa7gm")

[node name="Config" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("2_733f5")

[node name="Mouse" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("3_vbt87")

[node name="ClickTimer" type="Timer" parent="Mouse"]

[node name="DragTimer" type="Timer" parent="Mouse"]

[node name="DoubleClickBuffer" type="Timer" parent="Mouse"]

[node name="Behaviour" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("2_ovmnc")

[node name="BehaviourTimer" type="Timer" parent="Behaviour"]
wait_time = 30.0
autostart = true

[node name="HTTPRequest" type="HTTPRequest" parent="Behaviour"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="DebugRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.988235, 0.721569, 0.866667, 0.227451)

[node name="GridContainer" type="GridContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -104.0
offset_top = -104.0
offset_right = 104.0
offset_bottom = 104.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
columns = 3

[node name="Control2" type="Control" parent="CanvasLayer/GridContainer"]
layout_mode = 2

[node name="Top" type="Control" parent="CanvasLayer/GridContainer"]
layout_mode = 2

[node name="Control4" type="Control" parent="CanvasLayer/GridContainer"]
layout_mode = 2

[node name="Control5" type="Control" parent="CanvasLayer/GridContainer"]
layout_mode = 2

[node name="DraggableArea" type="CenterContainer" parent="CanvasLayer/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="DebugRect" type="ColorRect" parent="CanvasLayer/GridContainer/DraggableArea"]
layout_mode = 2
mouse_filter = 1
color = Color(0, 0.929412, 0.929412, 0.54902)

[node name="Sprite" type="Sprite2D" parent="CanvasLayer/GridContainer/DraggableArea"]
unique_name_in_owner = true
position = Vector2(96, 94)
texture = ExtResource("2_h6co6")

[node name="Control6" type="Control" parent="CanvasLayer/GridContainer"]
layout_mode = 2

[node name="Control7" type="Control" parent="CanvasLayer/GridContainer"]
layout_mode = 2

[node name="Control8" type="Control" parent="CanvasLayer/GridContainer"]
layout_mode = 2

[node name="Control9" type="Control" parent="CanvasLayer/GridContainer"]
layout_mode = 2
